fix: ensure plan JSON is updated and absences notified only once

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DISCORD_TOKEN=MTM3MDA0NjEyNzc4NDg1NzY1MA.GuzFFj.i7SPS1Rv3Um36-PO-9Yy9cD4j-JlQOanE6KmRo
 PLAN_CHANNEL_ID=1370328474346323988
+SHOW_TICK=true
+SHOW_RES=true
