--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DISCORD_TOKEN=REMOVED
-PLAN_CHANNEL_ID=1370328474346323988
-SHOW_TICK=true
-SHOW_RES=true
+PLAN_CHANNEL_ID=REMOVED
+SHOW_TICK=false
+SHOW_RES=false
